# haskcalc

./: CHANGELOG.md  README.md  haskcalc.cabal
app/: Main.hs
src/: Expr.hs  Parse.hs
test/: EvalSpec.hs  test.hs
