cabal-version:      2.4
name:               haskcalc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrew McHarg
maintainer:         amcharg@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base ==4.*
  exposed-modules:
      Expr
      Parse
--   other-modules:
--       Paths_strip
  default-language: Haskell2010

-- executable haskcalc
--     main-is:          Main.hs

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     build-depends:    base ^>=4.14.3.0
--     hs-source-dirs:   app
--     default-language: Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , tasty ==1.4.*
    , tasty-quickcheck ==0.10.2
    , tasty-hunit ==0.10.0.3
    , haskcalc


-- test-suite spec
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
--   ghc-options: -Wall
--   build-depends:
--       base ==4.*
--     , hspec ==2.*
--     , haskcalc
-- --   other-modules:
-- --       Data.String.StripSpec
-- --       Paths_strip
--   default-language: Haskell2010
--   build-tool-depends: hspec-discover:hspec-discover == 2.*
